[package]
name = "ftabutil"
authors = ["turbocooler <turbocooler@cocaine.ninja>"]
license = "MIT OR Apache-2.0"
description = "An utility to work with ftab (aka rkosftab) files."
repository = "https://github.com/turbocool3r/ftabutil"
keywords = ["ftab", "parsing", "firmware", "apple"]
categories = ["command-line-utilities", "parser-implementations"]
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
clap = { version = "4.0", features = ["cargo"] }
log = "0.4"
simple_logger = "4.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dialoguer = { version = "0.10", default-features = false }